@@ -20,6 +20,9 @@ CHANGES IN HTMLDOC v1.8.25
 	- Cookies were not sent in HTTP requests (STR #71)
 	- Table cells were not aligned properly when the ROWSPAN
 	  attribute was set to 1 (STR #73)
+	- Unresolved hyperlinks in aligned images could crash
+	  HTMLDOC (STR #62)
+
 
 CHANGES IN HTMLDOC v1.8.24
 
